apps/base/teaching/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: teaching-redirect-to-https
  namespace: teaching
spec:
  redirectScheme:
    scheme: https
    permanent: true
