apps/base/teaching/teaching.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teaching
  namespace: teaching
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: teaching
  template:
    metadata:
      labels:
        app: teaching
        app.kubernetes.io/name: teaching
    spec:
      terminationGracePeriodSeconds: 45
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: teaching
          image: tazzo/tazlab-teaching:teaching-25-3306a3da424afc40b6533e2e34f3952dd4b67830 # {"$imagepolicy": "flux-system:teaching"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 2
            failureThreshold: 15
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 5
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 20
            failureThreshold: 5
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "5"]
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: teaching
  namespace: teaching
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: teaching
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teaching-ingress
  namespace: teaching
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - teaching.tazlab.net
      secretName: teaching-tazlab.net-tls
  rules:
    - host: teaching.tazlab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teaching
                port:
                  number: 80
